# tasky-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.daily_summary  Dockerfile.tasky_chat  LICENSE.md  README.md  config.py  main.py  pyproject.toml
api_server/: config.py  database.py  run_tasky.py  secret_manager.py  tasky_ai.py  utils.py  whatsapp.py
services/: daily_summary.py  tasky_chat.py
supabase/: config.toml
supabase/migrations/: 20250821104527_create_users_and_tasks_tables.sql
tasky-agent/: prompt.py  utils.py
tasky-ai/: __init__.py
tasky-ai/agent/tasky_agent/: agent.py  config.py  tasks_db.py  utils.py
tasky-ai/agent/tasky_agent/tools/: create_tasks.py  delete_tasks.py  get_datetime_now.py  get_tasks.py  update_tasks.py
tasky_agent/: agent.py  prompt.py  utils.py
tasky_agent/tools/: create_tasks.py  delete_tasks.py  get_datetime_now.py  get_tasks.py  update_tasks.py
