[project]
name = "tasky-ai"
version = "0.1.0"
description = "AI-powered WhatsApp task management bot using Google ADK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "google-adk>=1.12.0",
    "supabase>=2.18.1",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9.10",
]
