[project]
name = "tasky-ai"
version = "0.1.0"
description = "An AI task manager on WhatsApp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-adk>=1.14.1",
    "google-cloud-secret-manager>=2.18.1",
    "google-cloud-speech>=2.27.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
    "supabase>=2.18.1",
    "uvicorn>=0.35.0",
]
